feat: add locales for home and login

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,9 +1,7 @@
 {
     "bar": {
         "home": "Home",
-        "recruitment": "Recruitment",
-        "department": "Deparment",
-        "absence": "Absence",
+        "threads": "Threads",
         "setting": "Setting"
     },
     "notification": "Notification",
