--- a/public/locales/en/login.json
+++ b/public/locales/en/login.json
@@ -1,6 +1,6 @@
 {
   "welcomeBack": "Welcome back",
-  "h1": "Sign in to Human",
+  "h1": "Sign in to Forum",
   "email": {
     "label": "Email address",
     "required": "Enter a valid email address",
