feat: merge with upstream

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,5 +1,8 @@
 {
-    "bar": {
+    "meta": {
+        "title": "Homepage"
+    },
+    "navigation": {
         "home": "Home",
         "threads": "Threads",
         "setting": "Setting"
